[package]
name = "logchecker_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
serde = { version = "1.0.130", features = ["derive"] }
envy = "0.4.2"
tokio = { version = "1.14", features = ["full"] }
