[package]
name = "logchecker_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
env_logger = "0.9.0"
envy = "0.4.2"
log = "0.4.14"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
tokio = { version = "1.14", features = ["full"] }
